--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,16 @@
 
     <button onclick="getTicket()">Get Ticket</button><br><br>
     
-    <input id="locale-id-input" type="number" style="width:40px"></input>
+    <label for="locale-id-input">Locale ID:</label><br>
+    <input id="locale-id-input" type="number" style="width:40px" value="1"></input><br>
+    <label for="kb-id-input">Knowledge base ID:</label><br>
+    <input id="kb-id-input" type="number" style="width:40px" value="1"></input><br><br>
+
     <button onclick="getCategories()">Get Categories</button><br><br>
+
+    <label for="answer-id-input">Answer ID:</label><br>
+    <input id="answer-id-input" type="number" style="width:40px" value="7"></input><br>
+    <button onclick="getTicketDetails()">Get Ticket details</button><br><br>
 
 
     <label id="url-input-label" for="url-input"></label>
